html and css framework

--- a/index.html
+++ b/index.html
@@ -7,8 +7,60 @@
     <title>Title</title>
     <link rel="stylesheet" href="screen.css">
   </head>
+
   <body>
-    <h1>Heading</h1>
     <script src="index.js"></script>
+    <!-- MENU BAR -->
+    <header>
+      <h1 class="title_name"><strong>NATHAN TAYLOR</strong></h1>
+      <!-- MENU ELEMENTS -->
+      <ul class="menu_elements">
+        <li> <a href="#">Contact</a> </li>
+        <li> <a href="#">Fun Stuff</a> </li>
+      </ul>
+    </header>
+
+    <!-- MAIN PAGE -->
+    <main>
+      <!-- INTRO BLOCK -->
+      <div class="intro_block">
+        <figure class="background_image">
+          <figure class="profile_image"> profile picture </figure>
+          <button class="resume"> Resume</button>
+        </figure>
+      </div>
+
+      <!-- PRIOR WORK -->
+      <section class="prior_work_block">
+        <h2 class="prior_work_title">Prior Work</h2>
+        <!-- DESIGN -->
+        <section class="skill_block" id="design">
+          <figure class="skill_image">
+          </figure>
+          <div class="skill_block_text">
+            sample
+          </div>
+        </section>
+        <!-- SOFTWARE -->
+        <section class="skill_block" id="software">
+          <div class="skill_block_text">
+            sample
+          </div>
+          <figure class="skill_image">
+          </figure>
+        </section>
+        <!-- DATA VIS -->
+        <section class="skill_block" id="data_vis">
+          <figure class="skill_image">
+          </figure>
+          <div class="skill_block_text">
+            sample
+          </div>
+        </section>
+      </section>
+    </main>
+    
   </body>
+
 </html>
+
