--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
       <!-- INTRO BLOCK -->
       <div class="intro_block">
         <figure class="background_image">
-          <figure class="profile_image"> profile picture </figure>
+          <img class="no_resize" src="stockimages/moonnight.jpg" alt="moonlit view over a mountain">
+          <figure>
+            <img class="profile_image" src="stockimages/profile.png" alt="profile image">
+          </figure>
           <button class="resume"> Resume</button>
         </figure>
       </div>
