wow css progress

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <main>
       <!-- INTRO BLOCK -->
       <div class="intro_block">
-        <figure class="background_image">
-          <img class="no_resize" src="stockimages/moonnight.jpg" alt="moonlit view over a mountain">
-          <figure>
-            <img class="profile_image" src="stockimages/profile.png" alt="profile image">
+        <figure class="background">
+          <figure class="profile_container">
+            <img class="profile_image" src="images/profile.png" alt="profile image">
+            <div class="profile_overlay"><h2>Hello!</h2></div>
           </figure>
-          <button class="resume"> Resume</button>
+          <button class="resume" role="button">Resume</button>
         </figure>
       </div>
 
@@ -41,7 +41,7 @@
           <figure class="skill_image">
           </figure>
           <div class="skill_block_text">
-            sample
+            I'm passionate about designing things, whether they're graphics, UI, or experiences. To me, design is more than just a beautification method—it's a powerful tool for enhancing the user experience and solving problems. Whenever possible, I prioritize consulting the end user to ensure that my designs meet their needs. However, when faced with limitations, I believe in stepping back and empathizing with the user to make a significant difference.
           </div>
         </section>
         <!-- SOFTWARE -->
