--- a/index.html
+++ b/index.html
@@ -59,19 +59,18 @@
       </section>
     </main>
 
-
-
+  <!-- FOOTER-->
 
     <footer>
-      <ul id="menu-socials" class="social-icons">
+      <ul class="social-icons">
         <li><a href="https://www.linkedin.com/in/nathan-taylor-601ba1262" target="_blank">
-          <img src="linkedin.png" alt="linkedin" class="lnkdin">
+          <img src="images/linkedin.png" alt="linkedin" class="indiv_icons" id="lnkdin">
         </a></li>
         <li><a href="https://github.com/nathanjtaylor" target="_blank">
-          <img src="github.png" alt="github" class="github">
+          <img src="images/github.png" alt="github" class="indiv_icons" id="github">
         </a></li>
         <li><a href=mailto:tayl1432@msu.edu target="_blank">
-          <img src="gmail.png" alt="gmail" class="email">
+          <img src="images/gmail.png" alt="gmail" class="indiv_icons" id="email">
         </a></li>
       </ul>
     </footer>
