--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nathan Taylor</title>
     <link rel="stylesheet" href="screen.css">
+    <link rel="icon" type="image/png" href="images/profile.ico">
+
   </head>
 
   <body>
@@ -14,9 +16,13 @@
       <h1 class="title_name"><a id="title_name" href="index.html"><strong>NATHAN TAYLOR</strong></a></h1>
       <!-- MENU ELEMENTS -->
       <ul class="menu_elements">
-        <li> <a href="#">Contact</a> </li>
+        <li> <a href="about.html">About</a> </li>
         <li> | </li>
-        <li> <a href="fun.html">Fun Stuff</a> </li>
+        <li> <a id="resume" href="#">Resume</a> </li>
+        <li> | </li>
+        <li> <a href="#recent_work">Recent Work</a> </li>
+        <li> | </li>
+        <li> <a href="#lnkdin">Contact</a> </li>
       </ul>
     </header>
 
@@ -25,37 +31,37 @@
       <!-- INTRO BLOCK -->
       <div class="intro_block">
           <img class="profile_image" src="images/profile.png" alt="profile image">
-          <button class="resume" id="resume" role="button">Resume</button>
+          <!-- <button class="resume" id="resume" role="button">Resume</button> -->
       </div>
 
       <!-- PRIOR WORK -->
-      <section class="prior_work_block">
-        <h2 class="prior_work_title">Prior Work</h2>
+      <section class="prior_work_block" id="recent_work">
+        <h2 class="prior_work_title">Recent Work</h2>
         <!-- DESIGN -->
         <section class="skill_block" id="design">
           <figure class="skill_image" id="design_cover">
           </figure>
           <div class="skill_block_text">
             <h2>Fantasy Football System</h2>
-            I'm passionate about designing things, whether they're graphics, UI, or experiences. To me, design is more than just a beautification method—it's a powerful tool for enhancing the user experience and solving problems. Whenever possible, I prioritize consulting the end user to ensure that my designs meet their needs. However, when faced with limitations, I believe in stepping back and empathizing with the user to make a significant difference.
+            In discussions with my father, I discovered he spent a significant amount of time managing a fantasy football league. This involved manually inputting participants' information and calculating their scores after each game—a tedious and time-intensive task. Determined to streamline this process, I spoke with him to identify the best approach for automation.
           </div>
         </section>
         <!-- SOFTWARE -->
-        <section class="skill_block" id="software">
+        <!-- <section class="skill_block" id="software">
           <div class="skill_block_text">
             sample
           </div>
           <figure class="skill_image">
           </figure>
-        </section>
+        </section> -->
         <!-- DATA VIS -->
-        <section class="skill_block" id="data_vis">
+        <!-- <section class="skill_block" id="data_vis">
           <figure class="skill_image">
           </figure>
           <div class="skill_block_text">
             sample
           </div>
-        </section>
+        </section> -->
       </section>
     </main>
 
