--- a/fantasy-football.html
+++ b/fantasy-football.html
@@ -8,18 +8,45 @@
     <link rel="stylesheet" href="screen.css">
   </head>
 
-  <body>
+  <body id="article_body">
     <script src="index.js"></script>
     <!-- MENU BAR -->
     <header>
       <h1 class="title_name"><a id="title_name" href="index.html"><strong>NATHAN TAYLOR</strong></a></h1>
       <!-- MENU ELEMENTS -->
       <ul class="menu_elements">
-        <li> <a href="#">Contact</a> </li>
+        <li> <a href="about.html">About</a> </li>
         <li> | </li>
-        <li> <a href="fun.html">Fun Stuff</a> </li>
+        <li> <a id="resume" href="#">Resume</a> </li>
+        <li> | </li>
+        <li> <a href="#recent_work">Recent Work</a> </li>
+        <li> | </li>
+        <li> <a href="#lnkdin">Contact</a> </li>
       </ul>
     </header>
+
+    <article>
+      <a href="index.html">Home</a>
+      <h1><strong>Fantasy Football System</strong></h1>
+      <p>In discussions with my father, I discovered he spent a significant amount of time managing a fantasy football league. This involved manually inputting participants' information and calculating their scores after each game—a tedious and time-intensive task. Determined to streamline this process, I spoke with him to identify the best approach for automation.</p>
+
+      <p>At the project's outset, I established two primary design objectives:</p>
+
+      <ul>
+        <li>Automate as much of the workflow as possible while ensuring usability for individuals with no programming knowledge.</li>
+        <li>Maintain the capability for manual inputs</li>
+      </ul>
+
+      <p>These goals guided my decisions throughout the project.</p>
+      
+      <p>During the conceptualization phase, I explored methods for participants to submit their picks and have them automatically uploaded into a spreadsheet. Drawing from my past experience with Google Forms, which could interact with Google Sheets, I delved into research on Google Apps Script—a modified version of JavaScript tailored for customizing this connection.</p>
+
+      <img src="images/fantasy_football.png" alt="spreadsheet with a auto-populated list of names and scores">
+
+
+      <img src="images/fantasy_football_form.png" alt="form to submit information to the system">
+
+    </article>
 
     <script src="index.js"></script>
     </body>
