--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
         <li> | </li>
         <li> <a id="resume" href="#">Resume</a> </li>
         <li> | </li>
-        <li> <a href="#recent_work">Recent Work</a> </li>
+        <li> <a href="index.html#recent_work">Recent Work</a> </li>
         <li> | </li>
-        <li> <a href="#lnkdin">Contact</a> </li>
+        <li> <a href="index.html#lnkdin">Contact</a> </li>
       </ul>
     </header>
 
