--- a/fantasy-football.html
+++ b/fantasy-football.html
@@ -21,18 +21,19 @@
         <li> | </li>
         <li> <a id="resume" href="#">Resume</a> </li>
         <li> | </li>
-        <li> <a href="#recent_work">Recent Work</a> </li>
+        <li> <a href="index.html#recent_work">Recent Work</a> </li>
         <li> | </li>
-        <li> <a href="#lnkdin">Contact</a> </li>
+        <li> <a href="index.html#lnkdin">Contact</a> </li>
       </ul>
     </header>
 
     <article>
       <a href="index.html">Home</a>
-      <h1><strong>Fantasy Football System</strong></h1>
-      <p>In discussions with my father, I discovered he spent a significant amount of time managing a fantasy football league. This involved manually inputting participants' information and calculating their scores after each game—a tedious and time-intensive task. Determined to streamline this process, I spoke with him to identify the best approach for automation.</p>
+      <h1><strong>Fantasy Football Automation</strong></h1>
+      <p>In discussions with an acquaintance, I discovered he spent a significant amount of time managing a fantasy football league. This involved manually inputting participants' information and calculating their scores after each game—a tedious and time-intensive task. Determined to streamline this process, I spoke with him to identify the best approach for automation.
+      </p>
 
-      <p>At the project's outset, I established two primary design objectives:</p>
+      <p>At the outset of the project, I established two primary design objectives:</p>
 
       <ul>
         <li>Automate as much of the workflow as possible while ensuring usability for individuals with no programming knowledge.</li>
