--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
       <ul class="menu_elements">
         <li> <a href="about.html">About</a> </li>
         <li> | </li>
-        <li> <a id="resume" href="#">Resume</a> </li>
-        <li> | </li>
         <li> <a href="#recent_work">Recent Work</a> </li>
         <li> | </li>
         <li> <a href="#lnkdin">Contact</a> </li>
@@ -31,7 +29,7 @@
       <!-- INTRO BLOCK -->
       <div class="intro_block">
           <img class="profile_image" src="images/profile.png" alt="profile image">
-          <!-- <button class="resume" id="resume" role="button">Resume</button> -->
+          <button class="resume" id="resume" role="button">Resume</button>
       </div>
 
       <!-- PRIOR WORK -->
@@ -42,8 +40,8 @@
           <figure class="skill_image" id="design_cover">
           </figure>
           <div class="skill_block_text">
-            <h2>Fantasy Football System</h2>
-            In discussions with my father, I discovered he spent a significant amount of time managing a fantasy football league. This involved manually inputting participants' information and calculating their scores after each game—a tedious and time-intensive task. Determined to streamline this process, I spoke with him to identify the best approach for automation.
+            <h2>Fantasy Football Automation</h2>
+            In discussions with an acquaintance, I discovered he spent a significant amount of time managing a fantasy football league. This involved manually inputting participants' information and calculating their scores after each game—a tedious and time-intensive task. Determined to streamline this process, I spoke with him to identify the best approach for automation.
           </div>
         </section>
         <!-- SOFTWARE -->
